Tweaks to content.

--- a/workshop/slides/index.html
+++ b/workshop/slides/index.html
@@ -62,6 +62,10 @@
                                 <section>
                                     <img src="live-demo.png" />
                                 </section>
+                                <section>
+                                    <h2>Questions?</h2>
+                                    <img src="openshift-banner-logo.png" />
+                                </section>
 			</div>
 		</div>
 
